# memoria

./: APIS.md  README.md
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py  osapis.py
backend/app/api/: health.py  search.py  snapshots.py  timeline.py
backend/app/config/: path.py
backend/app/os_apis/: linux.py  macos.py  windows.py
backend/app/services/: capture.py  index.py  ocr.py
memoria-ui/: index.html  package-lock.json  package.json
memoria-ui/src/: App.tsx
memoria-ui/src/components/: Error.tsx  Loading.tsx
memoria-ui/src/hooks/: useTimeline.ts
memoria-ui/src/lib/: api.ts
