[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "mss>=10.2.0",
    "pillow>=12.2.0",
    "platformdirs>=4.10.0",
    "pytesseract>=0.3.13",
    "ruff>=0.15.16",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
